kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-server
  labels:
    deployment: canary-backend
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: canary-server
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: canary-server
    spec:
      containers:
        - name: canary-server
          image: image
          ports:
            - containerPort: 7878
              name: http
              protocol: TCP
