kubernetes/canary-backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    service: canary-backend-service
    app: canary-backend-service
  name: canary-backend-service
  namespace: default

spec:
  type: NodePort
  selector:
    app: canary-backend
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 7878
