kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    service: canary-srv
    app: canary-server
  name: backend-srv

spec:
  selector:
    app: canary-server
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 7878
