kubernetes/canary-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-backend-ingress
spec:
  defaultBackend:
    service:
      name: canary-backend-service
      port:
        number: 8080
